--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,3 +1,32 @@
 spring:
   application:
     name: vehicle-manager
+
+  datasource:
+    url: jdbc:h2:mem:vehicle_db;DB_CLOSE_DELAY=-1;MODE=MYSQL
+    driverClassName: org.h2.Driver
+    username: sa
+    password:
+
+  jpa:
+    hibernate:
+      ddl-auto: none    # Flyway manages schema, so disable Hibernate schema generation
+    properties:
+      hibernate:
+        format_sql: true
+    show-sql: true
+
+  h2:
+    console:
+      enabled: true
+      path: /h2-console
+
+  flyway:
+    enabled: true
+    locations: classpath:db/migrations
+
+logging:
+  level:
+    org:
+      hibernate:
+        SQL=DEBUG: DEBUG
